# grafkom

./: CMakeLists.txt  main.cpp
customs/: things.hpp
